--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ nav ul li a:hover {
 }
 nav ul li a:hover::after { width:100%; }
 
-/* Live Clock Styling - FINAL FIX APPLIED HERE */
+/* Live Clock Styling - FINAL FIX */
 #live-clock {
     display: inline-block; /* Makes it shrink to content width */
     font-size: 0.9rem;
@@ -227,7 +227,7 @@ header video {
 }
 @keyframes fadeInScale {
     0% { opacity: 0; transform: scale(0.9); }
-    100% { transform: scale(1); }
+    100% { opacity: 1; transform: scale(1); }
 }
 
 .hero-content h1 { 
@@ -785,27 +785,65 @@ footer::after {
     
         <div class="service-card">
             <h3><i class="fas fa-palette"></i> Brand & Logo Design</h3>
-            <p>Includes: Custom Logo Design, Brand Identity Kits, Rebranding / Logo Concepts, Symbol + Typography Logos, 3D / Animated Logos.</p>
+            <p>
+                <ul>
+                    <li>Custom Logo Design</li>
+                    <li>Brand Identity Kits</li>
+                    <li>Rebranding / Logo Concepts</li>
+                    <li>Symbol + Typography Logos</li>
+                    <li>3D / Animated Logos</li>
+                </ul>
+            </p>
         </div>
         
         <div class="service-card">
             <h3><i class="fas fa-video"></i> Video & Motion Graphics</h3>
-            <p>Includes: Promo Reels, Event Recaps, Cinematic Montages, Product Edits, Motion Graphics, Visual Storytelling.</p>
+            <p>
+                <ul>
+                    <li>Promo Reels</li>
+                    <li>Event Recaps / Cinematic Montages</li>
+                    <li>Product Edits</li>
+                    <li>Motion Graphics</li>
+                    <li>Visual Storytelling</li>
+                </ul>
+            </p>
         </div>
         
         <div class="service-card">
             <h3><i class="fas fa-desktop"></i> Web & UX Design</h3>
-            <p>Includes: Websites, Business Pages / Portfolio Sites, Responsive & Modern Interactive Landing Pages.</p>
+            <p>
+                <ul>
+                    <li>Websites</li>
+                    <li>Business Pages / Portfolio Sites</li>
+                    <li>Responsive & Modern Interactive Landing Pages</li>
+                </ul>
+            </p>
         </div>
         
         <div class="service-card">
             <h3><i class="fas fa-bullhorn"></i> Print & Campaign Media</h3>
-            <p>Includes: Event Posters, College & Corporate Flyers, Campaign Designs, Social Media Banners, Corporate & Academic Decks, Infographic Designs.</p>
+            <p>
+                <ul>
+                    <li>Event Posters, College & Corporate Flyers</li>
+                    <li>Campaign Designs, Social Media Banners</li>
+                    <li>Corporate & Academic Decks</li>
+                    <li>Infographic Designs</li>
+                </ul>
+            </p>
         </div>
         
         <div class="service-card">
             <h3><i class="fas fa-pencil-ruler"></i> Digital Art & Pitch Decks</h3>
-            <p>Includes: Start-up Presentations / Investor Decks / Pitch Decks, PowerPoint & Canva Templates / Minimal Infographics, Digital Sketches / Custom Characters / Illustrations, Portrait Art / Concept-Based Artwork, Photo-to-Art Conversions / Couple / Family Art, Vector Art.</p>
+            <p>
+                <ul>
+                    <li>Start-up Presentations / Investor Decks / Pitch Decks</li>
+                    <li>PowerPoint & Canva Templates / Minimal Infographics</li>
+                    <li>Digital Sketches / Custom Characters / Illustrations</li>
+                    <li>Portrait Art / Concept-Based Artwork</li>
+                    <li>Photo-to-Art Conversions / Couple / Family Art</li>
+                    <li>Vector Art</li>
+                </ul>
+            </p>
         </div>
   </div>
 </section>
